# RetroAdv-Engine

./: .gitattributes  .gitignore  README.md  meson.build  post_install.fish  setup.fish
include/: app.h  collections.h  entity.h  repo.h  testing.h
include/Database/: schema.sql
src/: drawloop.c  entity.c  eventloop.c  main.c  player.c  utils.c
src/lists/: hashmap.c  list.c
src/repo/: database.c  entity_repo.c
src/tests/: hashmap.c  list.c  windowsmain.c
subprojects/: sdl3.wrap  sdl3_image.wrap
